
	* struct.c: accessing >10 member caused segmentation fault.
	  [ruby-dev:26247]

	* test/ruby/test_struct.rb: test it.

Wed Jun  1 11:30:09 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: can use single quote character in DESTDIR.
	  [ruby-dev:26205]

	* bcc32/Makefile.sub: Dir.glob in 1.9 doesn't treat \ as path separator.
	  [ruby-dev:26254]

Tue May 31 15:52:45 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): should
	  break the loop if the socket reached to EOF. [ruby-talk:142285]

	* lib/webrick/httpserver.rb (WEBrick::HTTPServer#run): send response
	  without reading the whole request body if keep-alive is diabled.
	  [experimental]

Mon May 30 23:48:29 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/macpkg.rb: add PACKAGE_NAME information of Tcl/Tk
	  Extension.

	* ext/tk/lib/tk/msgcat.rb: ditto.

	* ext/tk/lib/tk/winpkg.rb: ditto.

	* ext/tk/lib/tkextlib/*: ditto.

Sat May 28 16:39:21 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* test/openssl/test_x509store.rb: add test for expired CRL
	  and refine some assertions.

Sat May 28 05:15:44 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509store.c (ossl_x509stctx_set_time): should
	  not set internal flag directry.

Sat May 28 02:00:11 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI::Socket#request_line): 
	  ENV["REQUEST_URI"] is better to get correct Request-URI
	  than ENV["SCRIPT_NAME"] + ENV["PATH_INFO"].  [ruby-dev:26235]

Fri May 27 16:32:04 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb: use the semicolon as the path separator
	  in the environment of MSYS.  fixed: [ruby-dev:26232]

Thu May 26 20:31:21 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (remove_entry_secure): add documentation.

	* lib/fileutils.rb (remove_entry_secure): should not invoke
	  unlink(2) against a directory.
